--- a/css/main.css
+++ b/css/main.css
@@ -10,67 +10,74 @@
 }
 
 .row {
+  width: 100%;
   display: flex;
   flex-direction: row;
 }
 
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .col-1 {
-  width: auto;
+  width: 8.33%;
   padding: 10px;
 }
 
 .col-2 {
-  width: auto;
+  width: 16.66%;
   padding: 10px;
 }
 
 .col-3 {
-  width: auto;
+  width: 25%;
   padding: 10px;
 }
 
 .col-4 {
-  width: auto;
+  width: 33.33%;
   padding: 10px;
 }
 
 .col-5 {
-  width: auto;
+  width: 41.66%;
   padding: 10px;
 }
 
 .col-6 {
-  width: auto;
+  width: 50%;
   padding: 10px;
 }
 
 .col-7 {
-  width: auto;
+  width: 58.33%;
   padding: 10px;
 }
 
 .col-8 {
-  width: auto;
+  width: 66.66%;
   padding: 10px;
 }
 
 .col-9 {
-  width: auto;
+  width: 75%;
   padding: 10px;
 }
 
 .col-10 {
-  width: auto;
+  width: 83.33%;
   padding: 10px;
 }
 
 .col-11 {
-  width: auto;
+  width: 91.66%;
   padding: 10px;
 }
 
 .col-12 {
-  width: auto;
+  width: 100%;
   padding: 10px;
 }
 
@@ -264,6 +271,46 @@
 
 .size-6 {
   font-size: 1.67em;
+}
+
+.font-vw1 {
+  font-size: 1vw;
+}
+
+.font-vw2 {
+  font-size: 2vw;
+}
+
+.font-vw3 {
+  font-size: 3vw;
+}
+
+.font-vw4 {
+  font-size: 4vw;
+}
+
+.font-vw5 {
+  font-size: 5vw;
+}
+
+.font-vw6 {
+  font-size: 6vw;
+}
+
+.font-vw7 {
+  font-size: 7vw;
+}
+
+.font-vw8 {
+  font-size: 8vw;
+}
+
+.font-vw9 {
+  font-size: 9vw;
+}
+
+.font-vw10 {
+  font-size: 10vw;
 }
 
 .float-right {
@@ -896,7 +943,6 @@
   background-color: #f0f0f0;
   box-shadow: 1px 2px 3px rgba(5, 5, 5, 0.5);
   border-radius: 2px;
-  padding: 0 5px;
 }
 
 .card-header {
