--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -42,17 +42,17 @@ $radiusValues: (
 );
 
 $cols: (
-    1: 45%,
-    2: 50%,
-    3: 55%,
-    4: 60%,
-    5: 65%,
-    6: 70%,
-    7: 75%,
-    8: 80%,
-    9: 85%,
-    10: 90%,
-    11: 95%,
+    1: 8.33%,
+    2: 16.66%,
+    3: 25%,
+    4: 33.33%,
+    5: 41.66%,
+    6: 50%,
+    7: 58.33%,
+    8: 66.66%,
+    9: 75%,
+    10: 83.33%,
+    11: 91.66%,
     12: 100%,
 );
 
@@ -79,4 +79,25 @@ $fontWeight: (
     700: 700,
     800: 800,
     900: 900,
+);
+
+$textVw: (
+    vw1: 1vw,
+    vw2: 2vw,
+    vw3: 3vw,
+    vw4: 4vw,
+    vw5: 5vw,
+    vw6: 6vw,
+    vw7: 7vw,
+    vw8: 8vw,
+    vw9: 9vw,
+    vw10: 10vw,
+);
+
+$container-max-widths: (
+    sm: 540px,
+    md: 720px,
+    lg: 960px,
+    xl: 1140px,
+    xxl: 1320px,
 );
