--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -6,6 +6,9 @@
         @return #f0f0f0;
     }
 }
+//Making Responsive Container
+@mixin responsiveContainer {
+}
 
 //Classes & Utilities
 .container {
