--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+/*
+* Firefly CSS-based Framework v1.0.0
+* Copyright 2020 The Firefly Authors
+* Licensed under MIT
+*/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 .container {
   width: 80%;
