--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,8 @@
+/*
+* Firefly CSS-based Framework v1.0.0
+* Copyright 2020 The Firefly Authors
+* Licensed under MIT
+*/
 $DEVELOPMENT: 1;
 
 @import "variables";
