--- a/css/main.css
+++ b/css/main.css
@@ -27,62 +27,62 @@
 }
 
 .col-1 {
-  width: 8.33%;
+  flex: 8.33%;
   padding: 10px;
 }
 
 .col-2 {
-  width: 16.66%;
+  flex: 16.66%;
   padding: 10px;
 }
 
 .col-3 {
-  width: 25%;
+  flex: 25%;
   padding: 10px;
 }
 
 .col-4 {
-  width: 33.33%;
+  flex: 33.33%;
   padding: 10px;
 }
 
 .col-5 {
-  width: 41.66%;
+  flex: 41.66%;
   padding: 10px;
 }
 
 .col-6 {
-  width: 50%;
+  flex: 50%;
   padding: 10px;
 }
 
 .col-7 {
-  width: 58.33%;
+  flex: 58.33%;
   padding: 10px;
 }
 
 .col-8 {
-  width: 66.66%;
+  flex: 66.66%;
   padding: 10px;
 }
 
 .col-9 {
-  width: 75%;
+  flex: 75%;
   padding: 10px;
 }
 
 .col-10 {
-  width: 83.33%;
+  flex: 83.33%;
   padding: 10px;
 }
 
 .col-11 {
-  width: 91.66%;
+  flex: 91.66%;
   padding: 10px;
 }
 
 .col-12 {
-  width: 100%;
+  flex: 100%;
   padding: 10px;
 }
 
@@ -254,27 +254,27 @@
   font-weight: 900 !important;
 }
 
-.size-1 {
+.font-size-1 {
   font-size: 3em;
 }
 
-.size-2 {
+.font-size-2 {
   font-size: 2.5em;
 }
 
-.size-3 {
+.font-size-3 {
   font-size: 2.17em;
 }
 
-.size-4 {
+.font-size-4 {
   font-size: 2.33em;
 }
 
-.size-5 {
+.font-size-5 {
   font-size: 1.83em;
 }
 
-.size-6 {
+.font-size-6 {
   font-size: 1.67em;
 }
 
@@ -815,23 +815,27 @@
 }
 
 .btn-1 {
-  color: #f0f0f0;
-  padding: 7px 10px;
+  padding: 8px 15px;
   border: none;
+  border-radius: 5px;
+  background-color: #f0f0f0;
   transition: all 0.3s ease-in-out;
 }
 
 .btn-default {
   background-color: #f0f0f0;
+  background-color: #d7d7d7;
   color: #191919;
 }
 
 .btn-default:hover {
   background-color: #e3e3e3;
+  background-color: #cacaca;
 }
 
 .btn-default:active {
   background-color: #d7d7d7;
+  background-color: #bdbdbd;
 }
 
 .btn-primary {
@@ -875,7 +879,7 @@
 
 .btn-danger {
   background-color: #dc3545;
-  color: #191919;
+  color: #f0f0f0;
 }
 
 .btn-danger:hover {
@@ -888,7 +892,7 @@
 
 .btn-warning {
   background-color: #ffc107;
-  color: #191919;
+  color: #f0f0f0;
 }
 
 .btn-warning:hover {
@@ -941,6 +945,7 @@
 :disabled {
   opacity: 0.8;
   color: #6c757d;
+  pointer-events: none;
 }
 
 .card {
@@ -964,7 +969,7 @@
 }
 
 .card-footer {
-  background-color: #d7d7d7;
+  background-color: #cacaca;
   border-top: 1px solid rgba(5, 5, 5, 0.1);
   border-radius: 2px;
 }
@@ -1056,6 +1061,11 @@
   background-color: #fcbd00;
 }
 
+.card-warning .card-text,
+.card-warning .card-title {
+  color: #1d2124;
+}
+
 .card-primary {
   background-color: #007bff;
 }
@@ -1131,80 +1141,32 @@
   color: #f0f0f0;
 }
 
-.w-10 {
-  width: 10%;
-}
-
-.w-20 {
-  width: 20%;
-}
-
-.w-30 {
-  width: 30%;
-}
-
-.w-40 {
-  width: 40%;
+.w-25 {
+  width: 25%;
 }
 
 .w-50 {
   width: 50%;
 }
 
-.w-60 {
-  width: 60%;
-}
-
-.w-70 {
-  width: 70%;
-}
-
-.w-80 {
-  width: 80%;
-}
-
-.w-90 {
-  width: 90%;
+.w-75 {
+  width: 75%;
 }
 
 .w-100 {
   width: 100%;
 }
 
-.h-10 {
-  height: 10%;
-}
-
-.h-20 {
-  height: 20%;
-}
-
-.h-30 {
-  height: 30%;
-}
-
-.h-40 {
-  height: 40%;
+.h-25 {
+  height: 25%;
 }
 
 .h-50 {
   height: 50%;
 }
 
-.h-60 {
-  height: 60%;
-}
-
-.h-70 {
-  height: 70%;
-}
-
-.h-80 {
-  height: 80%;
-}
-
-.h-90 {
-  height: 90%;
+.h-75 {
+  height: 75%;
 }
 
 .h-100 {
@@ -1220,6 +1182,11 @@
 
 :focus {
   outline: 0;
+}
+
+::selection {
+  color: white !important;
+  background: black !important;
 }
 
 body {
