--- a/scss/_resets.scss
+++ b/scss/_resets.scss
@@ -8,3 +8,8 @@
 :focus {
     outline: 0;
 }
+
+::selection {
+    color: rgba(white, 50%) !important;
+    background: rgba(black, 5%) !important;
+}
