--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -41,7 +41,7 @@ $radiusValues: (
     10: 10px,
 );
 
-$cols: (
+$columnSizes: (
     1: 8.33%,
     2: 16.66%,
     3: 25%,
@@ -57,15 +57,9 @@ $cols: (
 );
 
 $percentageValues: (
-    10: 10%,
-    20: 20%,
-    30: 30%,
-    40: 40%,
+    25: 25%,
     50: 50%,
-    60: 60%,
-    70: 70%,
-    80: 80%,
-    90: 90%,
+    75: 75%,
     100: 100%,
 );
 
