--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,9 @@
 }
 
 .row {
-  width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .row:after {
@@ -27,63 +27,735 @@
 }
 
 .col-1 {
-  flex: 8.33%;
+  flex: 0 0 8.33%;
+  max-width: 8.33%;
   padding: 10px;
+}
+
+.col-xs-1 {
+  flex: 0 0 8.33%;
+  max-width: 8.33%;
+}
+
+@media (min-width: 280px) {
+  .col-xs-1 {
+    max-width: 540px;
+  }
+}
+
+.col-sm-1 {
+  flex: 0 0 8.33%;
+  max-width: 8.33%;
+}
+
+@media (min-width: 576px) {
+  .col-sm-1 {
+    max-width: 540px;
+  }
+}
+
+.col-md-1 {
+  flex: 0 0 8.33%;
+  max-width: 8.33%;
+}
+
+@media (min-width: 768px) {
+  .col-md-1 {
+    max-width: 720px;
+  }
+}
+
+.col-lg-1 {
+  flex: 0 0 8.33%;
+  max-width: 8.33%;
+}
+
+@media (min-width: 992px) {
+  .col-lg-1 {
+    max-width: 960px;
+  }
+}
+
+.col-xl-1 {
+  flex: 0 0 8.33%;
+  max-width: 8.33%;
+}
+
+@media (min-width: 1200px) {
+  .col-xl-1 {
+    max-width: 1140px;
+  }
 }
 
 .col-2 {
-  flex: 16.66%;
+  flex: 0 0 16.66%;
+  max-width: 16.66%;
   padding: 10px;
+}
+
+.col-xs-2 {
+  flex: 0 0 16.66%;
+  max-width: 16.66%;
+}
+
+@media (min-width: 280px) {
+  .col-xs-2 {
+    max-width: 540px;
+  }
+}
+
+.col-sm-2 {
+  flex: 0 0 16.66%;
+  max-width: 16.66%;
+}
+
+@media (min-width: 576px) {
+  .col-sm-2 {
+    max-width: 540px;
+  }
+}
+
+.col-md-2 {
+  flex: 0 0 16.66%;
+  max-width: 16.66%;
+}
+
+@media (min-width: 768px) {
+  .col-md-2 {
+    max-width: 720px;
+  }
+}
+
+.col-lg-2 {
+  flex: 0 0 16.66%;
+  max-width: 16.66%;
+}
+
+@media (min-width: 992px) {
+  .col-lg-2 {
+    max-width: 960px;
+  }
+}
+
+.col-xl-2 {
+  flex: 0 0 16.66%;
+  max-width: 16.66%;
+}
+
+@media (min-width: 1200px) {
+  .col-xl-2 {
+    max-width: 1140px;
+  }
 }
 
 .col-3 {
-  flex: 25%;
+  flex: 0 0 25%;
+  max-width: 25%;
   padding: 10px;
+}
+
+.col-xs-3 {
+  flex: 0 0 25%;
+  max-width: 25%;
+}
+
+@media (min-width: 280px) {
+  .col-xs-3 {
+    max-width: 540px;
+  }
+}
+
+.col-sm-3 {
+  flex: 0 0 25%;
+  max-width: 25%;
+}
+
+@media (min-width: 576px) {
+  .col-sm-3 {
+    max-width: 540px;
+  }
+}
+
+.col-md-3 {
+  flex: 0 0 25%;
+  max-width: 25%;
+}
+
+@media (min-width: 768px) {
+  .col-md-3 {
+    max-width: 720px;
+  }
+}
+
+.col-lg-3 {
+  flex: 0 0 25%;
+  max-width: 25%;
+}
+
+@media (min-width: 992px) {
+  .col-lg-3 {
+    max-width: 960px;
+  }
+}
+
+.col-xl-3 {
+  flex: 0 0 25%;
+  max-width: 25%;
+}
+
+@media (min-width: 1200px) {
+  .col-xl-3 {
+    max-width: 1140px;
+  }
 }
 
 .col-4 {
-  flex: 33.33%;
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
   padding: 10px;
+}
+
+.col-xs-4 {
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+}
+
+@media (min-width: 280px) {
+  .col-xs-4 {
+    max-width: 540px;
+  }
+}
+
+.col-sm-4 {
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+}
+
+@media (min-width: 576px) {
+  .col-sm-4 {
+    max-width: 540px;
+  }
+}
+
+.col-md-4 {
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+}
+
+@media (min-width: 768px) {
+  .col-md-4 {
+    max-width: 720px;
+  }
+}
+
+.col-lg-4 {
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+}
+
+@media (min-width: 992px) {
+  .col-lg-4 {
+    max-width: 960px;
+  }
+}
+
+.col-xl-4 {
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+}
+
+@media (min-width: 1200px) {
+  .col-xl-4 {
+    max-width: 1140px;
+  }
 }
 
 .col-5 {
-  flex: 41.66%;
+  flex: 0 0 41.66%;
+  max-width: 41.66%;
   padding: 10px;
+}
+
+.col-xs-5 {
+  flex: 0 0 41.66%;
+  max-width: 41.66%;
+}
+
+@media (min-width: 280px) {
+  .col-xs-5 {
+    max-width: 540px;
+  }
+}
+
+.col-sm-5 {
+  flex: 0 0 41.66%;
+  max-width: 41.66%;
+}
+
+@media (min-width: 576px) {
+  .col-sm-5 {
+    max-width: 540px;
+  }
+}
+
+.col-md-5 {
+  flex: 0 0 41.66%;
+  max-width: 41.66%;
+}
+
+@media (min-width: 768px) {
+  .col-md-5 {
+    max-width: 720px;
+  }
+}
+
+.col-lg-5 {
+  flex: 0 0 41.66%;
+  max-width: 41.66%;
+}
+
+@media (min-width: 992px) {
+  .col-lg-5 {
+    max-width: 960px;
+  }
+}
+
+.col-xl-5 {
+  flex: 0 0 41.66%;
+  max-width: 41.66%;
+}
+
+@media (min-width: 1200px) {
+  .col-xl-5 {
+    max-width: 1140px;
+  }
 }
 
 .col-6 {
-  flex: 50%;
+  flex: 0 0 50%;
+  max-width: 50%;
   padding: 10px;
+}
+
+.col-xs-6 {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+@media (min-width: 280px) {
+  .col-xs-6 {
+    max-width: 540px;
+  }
+}
+
+.col-sm-6 {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+@media (min-width: 576px) {
+  .col-sm-6 {
+    max-width: 540px;
+  }
+}
+
+.col-md-6 {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+@media (min-width: 768px) {
+  .col-md-6 {
+    max-width: 720px;
+  }
+}
+
+.col-lg-6 {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+@media (min-width: 992px) {
+  .col-lg-6 {
+    max-width: 960px;
+  }
+}
+
+.col-xl-6 {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+@media (min-width: 1200px) {
+  .col-xl-6 {
+    max-width: 1140px;
+  }
 }
 
 .col-7 {
-  flex: 58.33%;
+  flex: 0 0 58.33%;
+  max-width: 58.33%;
   padding: 10px;
+}
+
+.col-xs-7 {
+  flex: 0 0 58.33%;
+  max-width: 58.33%;
+}
+
+@media (min-width: 280px) {
+  .col-xs-7 {
+    max-width: 540px;
+  }
+}
+
+.col-sm-7 {
+  flex: 0 0 58.33%;
+  max-width: 58.33%;
+}
+
+@media (min-width: 576px) {
+  .col-sm-7 {
+    max-width: 540px;
+  }
+}
+
+.col-md-7 {
+  flex: 0 0 58.33%;
+  max-width: 58.33%;
+}
+
+@media (min-width: 768px) {
+  .col-md-7 {
+    max-width: 720px;
+  }
+}
+
+.col-lg-7 {
+  flex: 0 0 58.33%;
+  max-width: 58.33%;
+}
+
+@media (min-width: 992px) {
+  .col-lg-7 {
+    max-width: 960px;
+  }
+}
+
+.col-xl-7 {
+  flex: 0 0 58.33%;
+  max-width: 58.33%;
+}
+
+@media (min-width: 1200px) {
+  .col-xl-7 {
+    max-width: 1140px;
+  }
 }
 
 .col-8 {
-  flex: 66.66%;
+  flex: 0 0 66.66%;
+  max-width: 66.66%;
   padding: 10px;
+}
+
+.col-xs-8 {
+  flex: 0 0 66.66%;
+  max-width: 66.66%;
+}
+
+@media (min-width: 280px) {
+  .col-xs-8 {
+    max-width: 540px;
+  }
+}
+
+.col-sm-8 {
+  flex: 0 0 66.66%;
+  max-width: 66.66%;
+}
+
+@media (min-width: 576px) {
+  .col-sm-8 {
+    max-width: 540px;
+  }
+}
+
+.col-md-8 {
+  flex: 0 0 66.66%;
+  max-width: 66.66%;
+}
+
+@media (min-width: 768px) {
+  .col-md-8 {
+    max-width: 720px;
+  }
+}
+
+.col-lg-8 {
+  flex: 0 0 66.66%;
+  max-width: 66.66%;
+}
+
+@media (min-width: 992px) {
+  .col-lg-8 {
+    max-width: 960px;
+  }
+}
+
+.col-xl-8 {
+  flex: 0 0 66.66%;
+  max-width: 66.66%;
+}
+
+@media (min-width: 1200px) {
+  .col-xl-8 {
+    max-width: 1140px;
+  }
 }
 
 .col-9 {
-  flex: 75%;
+  flex: 0 0 75%;
+  max-width: 75%;
   padding: 10px;
+}
+
+.col-xs-9 {
+  flex: 0 0 75%;
+  max-width: 75%;
+}
+
+@media (min-width: 280px) {
+  .col-xs-9 {
+    max-width: 540px;
+  }
+}
+
+.col-sm-9 {
+  flex: 0 0 75%;
+  max-width: 75%;
+}
+
+@media (min-width: 576px) {
+  .col-sm-9 {
+    max-width: 540px;
+  }
+}
+
+.col-md-9 {
+  flex: 0 0 75%;
+  max-width: 75%;
+}
+
+@media (min-width: 768px) {
+  .col-md-9 {
+    max-width: 720px;
+  }
+}
+
+.col-lg-9 {
+  flex: 0 0 75%;
+  max-width: 75%;
+}
+
+@media (min-width: 992px) {
+  .col-lg-9 {
+    max-width: 960px;
+  }
+}
+
+.col-xl-9 {
+  flex: 0 0 75%;
+  max-width: 75%;
+}
+
+@media (min-width: 1200px) {
+  .col-xl-9 {
+    max-width: 1140px;
+  }
 }
 
 .col-10 {
-  flex: 83.33%;
+  flex: 0 0 83.33%;
+  max-width: 83.33%;
   padding: 10px;
+}
+
+.col-xs-10 {
+  flex: 0 0 83.33%;
+  max-width: 83.33%;
+}
+
+@media (min-width: 280px) {
+  .col-xs-10 {
+    max-width: 540px;
+  }
+}
+
+.col-sm-10 {
+  flex: 0 0 83.33%;
+  max-width: 83.33%;
+}
+
+@media (min-width: 576px) {
+  .col-sm-10 {
+    max-width: 540px;
+  }
+}
+
+.col-md-10 {
+  flex: 0 0 83.33%;
+  max-width: 83.33%;
+}
+
+@media (min-width: 768px) {
+  .col-md-10 {
+    max-width: 720px;
+  }
+}
+
+.col-lg-10 {
+  flex: 0 0 83.33%;
+  max-width: 83.33%;
+}
+
+@media (min-width: 992px) {
+  .col-lg-10 {
+    max-width: 960px;
+  }
+}
+
+.col-xl-10 {
+  flex: 0 0 83.33%;
+  max-width: 83.33%;
+}
+
+@media (min-width: 1200px) {
+  .col-xl-10 {
+    max-width: 1140px;
+  }
 }
 
 .col-11 {
-  flex: 91.66%;
+  flex: 0 0 91.66%;
+  max-width: 91.66%;
   padding: 10px;
 }
 
+.col-xs-11 {
+  flex: 0 0 91.66%;
+  max-width: 91.66%;
+}
+
+@media (min-width: 280px) {
+  .col-xs-11 {
+    max-width: 540px;
+  }
+}
+
+.col-sm-11 {
+  flex: 0 0 91.66%;
+  max-width: 91.66%;
+}
+
+@media (min-width: 576px) {
+  .col-sm-11 {
+    max-width: 540px;
+  }
+}
+
+.col-md-11 {
+  flex: 0 0 91.66%;
+  max-width: 91.66%;
+}
+
+@media (min-width: 768px) {
+  .col-md-11 {
+    max-width: 720px;
+  }
+}
+
+.col-lg-11 {
+  flex: 0 0 91.66%;
+  max-width: 91.66%;
+}
+
+@media (min-width: 992px) {
+  .col-lg-11 {
+    max-width: 960px;
+  }
+}
+
+.col-xl-11 {
+  flex: 0 0 91.66%;
+  max-width: 91.66%;
+}
+
+@media (min-width: 1200px) {
+  .col-xl-11 {
+    max-width: 1140px;
+  }
+}
+
 .col-12 {
-  flex: 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
   padding: 10px;
+}
+
+.col-xs-12 {
+  flex: 0 0 100%;
+  max-width: 100%;
+}
+
+@media (min-width: 280px) {
+  .col-xs-12 {
+    max-width: 540px;
+  }
+}
+
+.col-sm-12 {
+  flex: 0 0 100%;
+  max-width: 100%;
+}
+
+@media (min-width: 576px) {
+  .col-sm-12 {
+    max-width: 540px;
+  }
+}
+
+.col-md-12 {
+  flex: 0 0 100%;
+  max-width: 100%;
+}
+
+@media (min-width: 768px) {
+  .col-md-12 {
+    max-width: 720px;
+  }
+}
+
+.col-lg-12 {
+  flex: 0 0 100%;
+  max-width: 100%;
+}
+
+@media (min-width: 992px) {
+  .col-lg-12 {
+    max-width: 960px;
+  }
+}
+
+.col-xl-12 {
+  flex: 0 0 100%;
+  max-width: 100%;
+}
+
+@media (min-width: 1200px) {
+  .col-xl-12 {
+    max-width: 1140px;
+  }
 }
 
 .color-default {
@@ -736,6 +1408,10 @@
 
 .border-none {
   border: none;
+}
+
+.border-1 {
+  border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .radius-1 {
